--- a/html/404.html
+++ b/html/404.html
@@ -12,7 +12,7 @@
    <link rel="icon" type="image/x-icon" href="camod-logo-white@2x.png">
 
    <!--Stylesheet-->
-   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="/styles/styles.css">
 
    <!--Material Design Icons-->
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
@@ -48,6 +48,6 @@
       <p>Designed and Developed by Camryn O'Donnell</p>
    </footer>
 </body>
-<script src="script.js"></script>
+<script src="/scripts/script.js"></script>
 
 </html>
