--- a/html/index.html
+++ b/html/index.html
@@ -9,10 +9,10 @@
 
     <!--Site Info-->
     <title>Camryn O'Donnell - Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="assets/SVG/camod-logo-black.svg">
+    <link rel="icon" type="image/x-icon" href="/assets/SVG/camod-logo-black.svg">
 
     <!--Stylesheet-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles/styles.css">
 
     <!--Material Design Icons-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
@@ -29,12 +29,12 @@
 <body>
     <header id="header" class="padding-sides">
         <nav id="nav-bar">
-            <a id="link-about-me" class="focus-link" href="/#about-me-anchor" tabindex="0">
+            <a id="link-about-me" class="focus-link" href="#about-me-anchor" tabindex="0">
                 <span id="link-about-me-logo"></span>
                 <span id="link-about-me-text">Camryn O'Donnell</span>
             </a>
             <!--<button id="menu-button"class="material-symbols-outlined" tab-index="0">menu</button>-->
-            <a id="link-portfolio" class="focus-link heading4" href="/#portfolio-anchor" tabindex="0">portfolio</a>
+            <a id="link-portfolio" class="focus-link heading4" href="#portfolio-anchor" tabindex="0">portfolio</a>
             <a id="link-contact" class="focus-link heading4" href="#contact" tabindex="0">contact</a>
         </nav>
     </header>
@@ -44,7 +44,7 @@
             <div id="about-me-anchor" class="anchor"></div>
             <div id="about-me-content">
                 <div id="headshot-container" class="tool-tip">
-                    <img src="assets/CODonnell-Headshot-300x300.png" id="headshot" alt="A headshot of Camryn O'Donnell">
+                    <img src="/assets/CODonnell-Headshot-300x300.png" id="headshot" alt="A headshot of Camryn O'Donnell">
                     <span class="tool-tip-text">Heyyyyy welcome</span>
                 </div>
                 <div id="bio">
@@ -112,7 +112,7 @@
                     <!--Content Block--------->
                     <div class="portfolio-item-details">
                         <!--Hero Image-->
-                        <img class="heroshot" src="assets/Capstone Assets/CODonnell-Capstone_Hero-Shot.jpg"
+                        <img class="heroshot" src="/assets/Capstone //CODonnell-Capstone_Hero-Shot.jpg"
                             alt="A client and a therapist sitting in a room facing one another. They are surrounded by foldable therapy tiles, which are stacked using interlocking slots to create a space divider around them.">
                         <!--Objective & Summary-->
                         <div class="obj-sum">
@@ -132,7 +132,7 @@
                         <!--Panels-->
                         <div class="panel-container">
                             <figure id="panel1" class="panel">
-                                <img class="panelfig" src="assets/Capstone Assets/Capstone Images.png"
+                                <img class="panelfig" src="/assets/Capstone Assets/Capstone Images.png"
                                     alt="A mind map of the key stakeholders, sectors, contexts, and trends. Under “stakeholders” are clients and therapists. Under “contexts” are private residences, office buildings, and online. Under “sectors” are public and private. Under “trends” are collaborative care hubs, online & telehealth therapy, and a growing workforce.">
                                 <figcaption class="fig-caption">
                                     <h4 class="heading4">Learning About Mental Health Care in Ontario</h4>
@@ -151,7 +151,7 @@
                                 </figcaption>
                             </figure>
                             <figure id="panel2" class="panel">
-                                <img class="panelfig" src="assets/Capstone Assets/Capstone Images2.png" alt="A diagram representing the therapy environment. Two circles labelled  'clients'
+                                <img class="panelfig" src="/assets/Capstone Assets/Capstone Images2.png" alt="A diagram representing the therapy environment. Two circles labelled  'clients'
                                     and 'therapists' are overlapping and inside a larger circle
                                     labelled 'therapy environment'. In the background is a drawing of a therapy
                                     environment.">
@@ -168,7 +168,7 @@
                                 </figcaption>
                             </figure>
                             <figure id="panel3" class="panel">
-                                <img class="panelfig" src="assets/Capstone Assets/Capstone Images3.png"
+                                <img class="panelfig" src="/assets/Capstone Assets/Capstone Images3.png"
                                     alt="A collage of three images. The first image (left) is a sketch of a concept with two tent-like structures that lean against each other to form an arch over the client and therapist. The second image (center) is a photograph from a side angle of a person sitting in a chair beneath a full-scale model of the previous concept. The third image (right) is a comic/narrative prototype showing a therapist bringing the device to a coworking space, setting it up, and taking it apart.">
                                 <figcaption class="fig-caption">
                                     <h4 class="heading4">How Might We Create the Therapeutic Environment Anywhere?</h4>
@@ -180,7 +180,7 @@
                                 </figcaption>
                             </figure>
                             <figure id="panel4" class="panel">
-                                <img class="panelfig" src="assets/Capstone Assets/Capstone Images4.png"
+                                <img class="panelfig" src="/assets/Capstone Assets/Capstone Images4.png"
                                     alt="A collage of images showing cardboard prototypes, a moodboard, and a 3D rendering of the final concept: foldable tiles that can be assembled by stacking them on top of one another in different configurations.">
                                 <figcaption class="fig-caption">
                                     <h4 class="heading4">Refining the Portable Therapy Environment
@@ -235,7 +235,7 @@
                     <!--Content Block--------->
                     <div class="portfolio-item-details">
                         <!--Hero Image-->
-                        <img class="heroshot" src="assets/Early/EARLY-Image_0.png"
+                        <img class="heroshot" src="/assets/Early/EARLY-Image_0.png"
                             alt="An app icon with a looping arrow in the shape of a lowercase E and wireframes of the EARLY app showing different screens.">
                         <!--Objective & Summary-->
                         <div class="obj-sum">
@@ -255,7 +255,7 @@
                         <!--Panels-->
                         <div class="panel-container">
                             <figure id="panel1" class="panel">
-                                <img class="panelfig" src="assets/Early/EARLY-Image_1.jpg"
+                                <img class="panelfig" src="/assets/Early/EARLY-Image_1.jpg"
                                     alt="People standing at a bus stop on a winter day as an OC Transpo bus arrives.">
                                 <figcaption class="fig-caption">
                                     <h4 class="heading4">Understanding Commuter’s Journeys</h4>
@@ -267,7 +267,7 @@
                                 </figcaption>
                             </figure>
                             <figure id="panel2" class="panel">
-                                <img class="panelfig" src="assets/Early/EARLY-Image_2.png"
+                                <img class="panelfig" src="/assets/Early/EARLY-Image_2.png"
                                     alt="User persona of Suzie Choi, 21 year old student and sales associate. Image text: Bio: Suzie is a 4th-year international student taking Computer Science at Carleton University. She works part-time at the Rideau Centre and has a busy schedule between school and work. She doesn’t have a licence and wants to save money so she relies heavily on the bus. Apps Used: Google Maps,Transit. Goals: plan her bus routes before her trips, be on schedule for work and school, secure personal space on the bus, be COVID-safe on the bus, save money by making use of her UPass. Pain Points: stressed about buses being potentially late, GPS tracking disconnecting, delayed buses making her late, crowded buses and safety measures not being practiced, concerned about the cleanliness of bus seats, handles, and buzzers. Quote: “I always leave early because I can’t fully trust the bus schedule or GPS tracking.”.">
                                 <figcaption class="fig-caption">
                                     <h4 class="heading4">Identifying Personas</h4>
@@ -279,7 +279,7 @@
                                 </figcaption>
                             </figure>
                             <figure id="panel3" class="panel">
-                                <img class="panelfig" src="assets/Early/EARLY-Image_3.png"
+                                <img class="panelfig" src="/assets/Early/EARLY-Image_3.png"
                                     alt="A series screens before and after user testing. First improvement: confusing visual semantics. The background of the bus route icon was removed to make it look less like a button and the reset button was changed from a trash icon to a counter-clockwise arrow icon. Second improvement: lack of feedback. Added a screen to confirm set up. Third improvement: insufficient level of detail. Added flashing animation to “Favourites” section to show changes on update. Added text under the menu icons.">
                                 <figcaption class="fig-caption">
                                     <h4 class="heading4">Clickable Prototype & User Testing
@@ -292,7 +292,7 @@
                                 </figcaption>
                             </figure>
                             <figure id="panel4" class="panel">
-                                <img class="panelfig" src="assets/Early/EARLY-Image_4.png"
+                                <img class="panelfig" src="/assets/Early/EARLY-Image_4.png"
                                     alt="A moodboard with images, app UIs, and graphic design inspiration.">
                                 <figcaption class="fig-caption">
                                     <h4 class="heading4">Final Visual Design
@@ -304,7 +304,7 @@
                             </figure>
                         </div>
                         <figure id="panel5" class="panel">
-                            <img class="panelfig" src="assets/Early/EARLY-Image_5.png"
+                            <img class="panelfig" src="/assets/Early/EARLY-Image_5.png"
                                 alt="Three screens showcasing key design features of the EARLY app. Text for the home screen: “Daily commute forecast: incorporates weather and traffic for a complete view of your commute. Favourite Routes: through a simple set-up process, users can input information about their daily commute to get notifications and updates on the status of most-used bus routes”. Text for the search details: “Planning Tools: Route information is structured to allow new users to learn about Ottawa’s transit system while giving experienced users the most relevant information. Bus Station Info: Bus stations have additional information to help users navigate their transfers.” Text for the view of the current trip”Trip Tracking: Using a combination of official OC Transpo data, traffic data, and crowdsourced information on delays and crowdedness, EARLY provides users with the most relevant & accurate information possible. See Alternate Routes:Allows users to quickly switch routes in case of last minute delays or obstacles.”">
                             <figcaption class="fig-caption">
                                 <h4 class="heading4">Final Concept: A Mobile Transit Assistant
@@ -355,6 +355,6 @@
         <p>Designed and Developed by Camryn O'Donnell</p>
     </footer>
 </body>
-<script src="script.js"></script>
+<script src="/scripts/script.js"></script>
 
 </html>
