Added dark/light mode toggle and Sass theming + added resume to assets/documents

--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
 
 <head>
     <!--Meta Tags-->
@@ -35,9 +35,10 @@
             </a>
             <a id="link-portfolio" class="section--link section--heading_sm" href="#portfolio-anchor"
                 tabindex="0">portfolio</a>
-            <a id="link-contact" class="section--link section--heading_sm" href="#contact" tabindex="0">contact</a>
+            <a id="link-contact" class="section--link section--heading_sm" href="#contact" tabindex="0">contact</a> 
         </nav>
     </header>
+    <button id="toggle-theme" class="body--toggle-button" tabindex="0"></button>
     <main>
         <!--About Me-->
         <section id="about-me" aria-label="About Me" class="body--section_about-me section">
