--- a/html/404.html
+++ b/html/404.html
@@ -45,7 +45,7 @@
       </section>
    </main>
    <footer class="body--section_footer">
-      <button id="toggle-theme" class="toggle-button" tabindex="0"></button>
+      <button id="toggle-theme" aria-label="Toggle Light/Dark Theme" class="toggle-button" tabindex="0"></button>
       <p class="section--paragraph">Designed and Developed by Camryn O'Donnell</p>
    </footer>
 </body>
