Added scroll transition to contact section

--- a/html/index.html
+++ b/html/index.html
@@ -113,7 +113,7 @@
             </div>
         </section>
         <!--Contact-->
-        <section id="contact" aria-label="Contact" class="body--section_contact section">
+        <section id="contact" aria-label="Contact" class="body--section_contact_hidden section">
             <h2 class="section--heading_lg"><span class="sr-only">Contact: </span>Interested in my work?</h2>
 
             <div class="section--container_row_space-between">
