Added smooth scroll, tweaked some CSS, adde meta tags

--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="dark light">
-
+    
     <!--Site Info-->
     <title>Camryn O'Donnell - Portfolio</title>
+    <meta name="description" content="Camryn O'Donnell is a multidisciplinary designer with experience in design research, UX/UI design, and product design.">
+    <meta name="author" content="Camryn O'Donnell">
+   
     <link rel="icon" type="image/x-icon" href="/assets/SVG/camod-logo-black.svg">
 
     <!--Stylesheet-->
@@ -27,7 +30,7 @@
 </head>
 
 <body class="body">
-    <header id="header" class="body--section_header section">
+    <header id="header" class="body--section_header">
         <nav id="nav-bar" class="navigation">
             <a id="link-about-me" class="section--link_with-icon_lg" href="#about-me-anchor" tabindex="0" aria-label="Camryn O'Donnell Home">
                 <span id="camod-logo"></span>
@@ -40,9 +43,9 @@
     </header>
     <main>
         <!--About Me-->
-        <section id="about-me" aria-label="About Me" class="body--section_about-me section">
+        <section id="about-me" aria-label="About Me" class="body--section_about-me">
             <div id="about-me-anchor" class="section--anchor_about-me anchor"></div>
-            <div id="about-me-content" class="section--container">
+            <div id="about-me-content" class="section--container_row">
                 <div id="headshot-container" class="section--avatar">
                     <img src="/assets/CODonnell-Headshot-300x300.png" id="headshot"
                         alt="A headshot of Camryn O'Donnell">
@@ -113,7 +116,7 @@
             </div>
         </section>
         <!--Contact-->
-        <section id="contact" aria-label="Contact" class="body--section_contact_hidden section">
+        <section id="contact" aria-label="Contact" class="body--section_contact_hidden">
             <h2 class="section--heading_lg"><span class="sr-only">Contact: </span>Interested in my work?</h2>
 
             <div class="section--container_row_space-between">
