Cleaned up formatting

--- a/html/index.html
+++ b/html/index.html
@@ -6,12 +6,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="dark light">
-    
+
     <!--Site Info-->
     <title>Camryn O'Donnell - Portfolio</title>
-    <meta name="description" content="Camryn O'Donnell is a multidisciplinary designer with experience in design research, UX/UI design, and product design.">
+    <meta name="description"
+        content="Camryn O'Donnell is a multidisciplinary designer with experience in design research, UX/UI design, and product design.">
     <meta name="author" content="Camryn O'Donnell">
-   
+
     <link rel="icon" type="image/x-icon" href="/assets/SVG/camod-logo-black.svg">
 
     <!--Stylesheet-->
@@ -32,13 +33,14 @@
 <body class="body">
     <header id="header" class="body--section_header">
         <nav id="nav-bar" class="navigation">
-            <a id="link-about-me" class="section--link_with-icon_lg" href="#about-me-anchor" tabindex="0" aria-label="Camryn O'Donnell Home">
+            <a id="link-about-me" class="section--link_with-icon_lg" href="#about-me-anchor" tabindex="0"
+                aria-label="Camryn O'Donnell Home">
                 <span id="camod-logo"></span>
                 <p aria-hidden="true" id="camod-name" class="section--heading_lg">Camryn O'Donnell</p>
             </a>
             <a id="link-portfolio" class="section--link section--heading_sm" href="#portfolio-anchor"
                 tabindex="0">portfolio</a>
-            <a id="link-contact" class="section--link section--heading_sm" href="#contact" tabindex="0">contact</a> 
+            <a id="link-contact" class="section--link section--heading_sm" href="#contact" tabindex="0">contact</a>
         </nav>
     </header>
     <main>
@@ -73,7 +75,8 @@
                     <div id="about-me-content-link" class="section--link_button">
                         <p class="link-button--label">Resumé/CV:</p>
                         <a id="download-resume" class="section--link-button link-button"
-                            href="assets\documents\Camryn-ODonnell_Resume.pdf" download="Camryn-ODonnell_Resume" tabindex="0">
+                            href="assets\documents\Camryn-ODonnell_Resume.pdf" download="Camryn-ODonnell_Resume"
+                            tabindex="0">
                             <span aria-hidden="true" class="material-icons ">download</span>
                             Download<span class="sr-only">Resume</span>
                         </a>
@@ -100,7 +103,8 @@
                         This browser does not support JavaScript. Feel free to download my portfolio below.
                     </noscript>
                 </div>
-                <p id="coming-soon" class="section--heading_sm section--paragraph_centered"><span aria-hidden="true">&#128295;</span> More projects
+                <p id="coming-soon" class="section--heading_sm section--paragraph_centered"><span
+                        aria-hidden="true">&#128295;</span> More projects
                     coming soon! <span aria-hidden="true">&#128295;</span></p>
                 <!--Link to detailed portfolio-->
                 <div id="portfolio-link" class="section--link_bg-box">
@@ -108,7 +112,9 @@
                         download my
                         portfolio here!
                     </p>
-                    <a id="download-portfolio" class="link-button" href="https://drive.google.com/file/d/1jjbdRse7Gbk-tiKkPJfSCeMcG1G8YarI/view" title="Google Drive: Camryn O'Donnell - Portfolio" tabindex="0" target="_blank">
+                    <a id="download-portfolio" class="link-button"
+                        href="https://drive.google.com/file/d/1jjbdRse7Gbk-tiKkPJfSCeMcG1G8YarI/view"
+                        title="Google Drive: Camryn O'Donnell - Portfolio" tabindex="0" target="_blank">
                         <span aria-hidden="true" class="material-icons ">download</span>
                         Download<span class="sr-only">Portfolio</span>
                     </a>
@@ -122,11 +128,13 @@
             <div class="section--container_row_space-between">
                 <p class="section--heading_sm">Feel free to contact me!</p>
                 <div class="section--container_row">
-                    <a id="email" class="section--link_with-icon " href="mailto:camryn.odonnell@gmail.com" tabindex="0" target="_blank">
+                    <a id="email" class="section--link_with-icon " href="mailto:camryn.odonnell@gmail.com" tabindex="0"
+                        target="_blank">
                         <span aria-hidden="true" class="material-icons green">mail_outline</span>
                         <span class="section--heading_md green">Email</span>
                     </a>
-                    <a id="linkedin" class="section--link_with-icon" href="https://www.linkedin.com/in/camryn-odonnell/" tabindex="0" target="_blank">
+                    <a id="linkedin" class="section--link_with-icon" href="https://www.linkedin.com/in/camryn-odonnell/"
+                        tabindex="0" target="_blank">
                         <span aria-hidden="true" class="material-icons blue">work_outline</span>
                         <span class="section--heading_md blue">LinkedIn</span>
                     </a>
