Test push for auto deployment

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </main>
     <footer class="body--section_footer">
         <button id="toggle-theme" aria-label="Toggle Light/Dark Mode" class="toggle-button" tabindex="0"></button>
-        <p class="section--paragraph">Designed & Developed by Camryn O'Donnell</p>
+        <p class="section--paragraph">Designed and Developed by Camryn O'Donnell</p>
     </footer>
 </body>
 
