Added GitHub link and updated CV

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                         cooking. I also enjoy playing video games & tabletop RPGs with friends!
                     </p>
                     <div id="about-me-content-link" class="section--link_button">
-                        <p class="link-button--label">Resumé/CV:</p>
+                        <p class="link-button--label">CV:</p>
                         <a id="download-resume" class="section--link-button link-button"
-                            href="assets\documents\Camryn-ODonnell_Resume.pdf" download="Camryn-ODonnell_Resume"
+                            href="assets\documents\Camryn-ODonnell_CV.pdf" download="Camryn-ODonnell_CV_June-2024"
                             tabindex="0">
                             <span aria-hidden="true" class="material-icons ">download</span>
-                            Download<span class="sr-only">Resume</span>
+                            Download<span class="sr-only">CV</span>
                         </a>
                     </div>
                 </div>
@@ -139,6 +139,13 @@
                         <span class="section--heading_md blue">LinkedIn</span>
                     </a>
                 </div>
+            </div>
+            <div class="section--container_row_space-between">
+                <p class="section--heading_sm">You can also find me on:</p>
+                <a id="github" class="section--link_with-icon" href="https://github.com/camdotod" tabindex="0" target="_blank">
+                    <span aria-hidden="true" class="material-icons red">mediation</span>
+                    <span class="section--heading_md red">GitHub</span>
+                </a>
             </div>
         </section>
     </main>
