--- a/html/portfolio/Foldable-Therapy-Space.html
+++ b/html/portfolio/Foldable-Therapy-Space.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="">
+<html lang="en">
 
 <head>
    <!--Meta Tags-->
@@ -8,7 +8,7 @@
    <meta name="color-scheme" content="dark light">
 
    <!--Site Info-->
-   <title>Camryn O'Donnell - Contact</title>
+   <title>Foldable Therapy Space</title>
    <meta name="description"
       content="Camryn O'Donnell is a multidisciplinary designer with experience in design research, UX/UI design, and product design.">
    <meta name="author" content="Camryn O'Donnell">
@@ -52,37 +52,12 @@
          <a id="link-contact" class="hover:underline" href="./contact.html" tabindex="0">contact</a>
       </nav>
    </header>
-   <!--Contact-->
-   <section id="contact" aria-label="Contact" class="body--section_contact_hidden">
-      <h2 class="section--heading_lg"><span class="sr-only">Contact: </span>Interested in my work?</h2>
-
-      <div class="section--container_row_space-between">
-         <p class="section--heading_sm">Feel free to contact me!</p>
-         <div class="section--container_row">
-            <a id="email" class="section--link_with-icon " href="mailto:camryn.odonnell@gmail.com" tabindex="0"
-               target="_blank">
-               <span aria-hidden="true" class="material-icons green">mail_outline</span>
-               <span class="section--heading_md green">Email</span>
-            </a>
-            <a id="linkedin" class="section--link_with-icon" href="https://www.linkedin.com/in/camryn-odonnell/"
-               tabindex="0" target="_blank">
-               <span aria-hidden="true" class="material-icons blue">work_outline</span>
-               <span class="section--heading_md blue">LinkedIn</span>
-            </a>
-         </div>
-      </div>
-      <div class="section--container_row_space-between">
-         <p class="section--heading_sm">You can also find me on:</p>
-         <a id="github" class="section--link_with-icon" href="https://github.com/camdotod" tabindex="0" target="_blank">
-            <span aria-hidden="true" class="material-icons red">mediation</span>
-            <span class="section--heading_md red">GitHub</span>
-         </a>
-      </div>
-   </section>
-   <footer class="body--section_footer">
+   <!--Portfolio-->
+   <main class="flex flex-col gap-10 items-start">
+   </main>
+   <footer class="flex w-full h-fit pt-20 pb-5 px-10 md:px-20">
       <!--<button id="toggle-theme" aria-label="Toggle Light/Dark Mode" class="toggle-button" tabindex="0"></button>-->
-      <p class="section--paragraph">Designed & Developed by Camryn O'Donnell</p>
+      <p class="opacity-70 text-right">Designed & Developed by Camryn O'Donnell</p>
    </footer>
 </body>
-
 </html>
